--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native-stack": "^6.9.17",
     "expo": "~49.0.15",
     "expo-constants": "~14.4.2",
+    "expo-sqlite": "~11.3.3",
     "expo-status-bar": "~1.6.0",
     "firebase": "^10.7.0",
     "moment": "^2.29.4",
@@ -24,11 +25,11 @@
     "react-native-elements": "^3.4.3",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-modal": "^13.0.1",
+    "react-native-picker-select": "^9.0.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-swiper": "^1.6.0",
-    "react-native-table-component": "^1.2.2",
-    "expo-sqlite": "~11.3.3"
+    "react-native-table-component": "^1.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
