--- a/package.json
+++ b/package.json
@@ -16,23 +16,29 @@
     "@react-navigation/native-stack": "^6.9.17",
     "expo": "~49.0.15",
     "expo-constants": "~14.4.2",
+    "expo-document-picker": "~11.5.4",
+    "expo-file-system": "~15.4.5",
     "expo-sqlite": "~11.3.3",
     "expo-status-bar": "~1.6.0",
     "firebase": "^10.7.0",
     "moment": "^2.29.4",
+    "papaparse": "^5.4.1",
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-elements": "^3.4.3",
+    "react-native-fs": "^2.20.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-modal": "^13.0.1",
     "react-native-picker-select": "^9.0.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-swiper": "^1.6.0",
-    "react-native-table-component": "^1.2.2"
+    "react-native-table-component": "^1.2.2",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@types/papaparse": "^5.3.14",
     "@types/react": "~18.2.14",
     "@types/react-native-table-component": "^1.2.7",
     "typescript": "^5.1.3"
