--- a/package.json
+++ b/package.json
@@ -37,7 +37,10 @@
     "react-native-svg": "13.9.0",
     "react-native-swiper": "^1.6.0",
     "react-native-table-component": "^1.2.2",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "react-native-web": "~0.19.6",
+    "react-dom": "18.2.0",
+    "@expo/webpack-config": "^19.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
