--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "leiknach",
+  "name": "attendance",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -21,7 +21,6 @@
     "expo-document-picker": "~11.5.4",
     "expo-file-system": "~15.4.5",
     "expo-intent-launcher": "~10.7.0",
-    "expo-permissions": "~14.2.1",
     "expo-sharing": "~11.5.0",
     "expo-sqlite": "~11.3.3",
     "expo-status-bar": "~1.6.0",
@@ -31,28 +30,18 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.6",
-    "react-native-chart-kit": "^6.12.0",
     "react-native-element-dropdown": "^2.10.1",
     "react-native-elements": "^3.4.3",
-    "react-native-fs": "^2.20.0",
-    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-modal": "^13.0.1",
     "react-native-paper": "^5.11.6",
-    "react-native-radio-buttons-group": "^3.0.5",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-svg": "13.9.0",
-    "react-native-swiper": "^1.6.0",
-    "react-native-table-component": "^1.2.2",
-    "react-native-web": "~0.19.6",
-    "xlsx": "^0.18.5",
-    "xlsx-style": "^0.8.13"
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.14",
-    "@types/react-native-table-component": "^1.2.7",
     "typescript": "^5.1.3"
   },
   "private": true
